# routes/index.js
@@ -1,12 +1,24 @@
+const passport = require('passport');
+
 const router = require('express').Router();
 
-router.use('/', require('./swagger')); // This is now safe
+router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => {
-    res.send('hello world');
-});
+    res.send('hello world')
+})
 
 router.use('/cars', require('./cars'));
+
 router.use('/clients', require('./clients'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) { return next(err);}
+        res.redirect('/')
+    })
+})
 
 module.exports = router;
